adicionado lista ao arquivo index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>tech</h1>
+    <ul>
+        <li>brach principal</li>
+        <li>pronta</li>
+    </ul>
 </body>
 </html>
